[package]
name = "calisp"
version = "0.1.0"
authors = ["Jáchym Tomášek <jachym.tomasek@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calisp"
path = "src/calisp.rs"

[dependencies]
rustyline = "5.0.3"
lazy_static = "1.4.0"

regex = "1.3.1"
itertools = "0.8.0"
fnv = "1.0.6"
