[package]
name = "calisp"
description = "MAL clone, lisp language"
version = "0.2.2"
authors = ["Jáchym Tomášek <jachym.tomasek@tutanota.com>"]
edition = "2018"
license = "MPL-2.0"
license-file = "LICENSE"
repository = "https://github.com/WesterWest/calisp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calisp"

[lib]
crate-type = ["lib"]

[dependencies]
rustyline = "7.0.0"
clap = "2.33.1"
lazy_static = "1.4.0"

regex = "1.3.1"
itertools = "0.8.0"
fnv = "1.0.6"
